# documento

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  barcode_style.css  barcode_template.html  docker-compose.yml  install.sh  manage.py  print_server.py  pyproject.toml  tox.ini
.github/workflows/: deploy.yml  lint.yml  reformat.yml  test.yml
ci/: docker.yml  general.yml
ci/js/: lint.yml
ci/python/: lint.yml
docker-setup/: init_and_run.sh  nginx-app.conf  uwsgi-app.ini
documento/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
documents/: api.py  endpoints.py  models.py  serializers.py  tasks.py  views.py
documents/management/commands/: init_admin.py  wait_for_db.py
documents/migrations/: 0001_initial.py  0002_document_file.py  0003_print_job.py  0004_auto_20201015_1921.py  0005_auto_20201016_1216.py
frontend/: .prettierignore  config-overrides.js  package.json  tsconfig.json
frontend/src/: App.js  App.tsx  helper.js  helper.ts  index.css  index.js  serviceWorker.ts  styles.js  styles.ts  types.d.ts
frontend/src/actions/: auth.js  categories.js  documents.js  index.js  locale.js
frontend/src/components/: AreYouSure.js  AreYouSure.tsx  Categories.js  Categories.tsx  CategoriesForm.js  CategoriesForm.tsx  CategoriesTable.js  CategoriesTable.tsx  CategoryPath.js  CategoryPath.tsx  CategorySelect.js  CategorySelect.tsx  Dashboard.jsx  DocumentViewer.js  DocumentViewer.tsx  Documents.js  Documents.jsx  Documents.tsx  DocumentsForm.js  DocumentsForm.tsx  DocumentsTable.js  DocumentsTable.tsx  Drawer.js  Drawer.tsx  Footer.js  Header.js  Header.tsx  LanguageSelect.js  LanguageSelect.tsx  Login.js  Login.jsx  Login.tsx  NetworkError.tsx  NotFound.js
frontend/src/lang/: de.json  en.json
frontend/src/reducers/: auth.js  auth.ts  categories.js  categories.ts  documents.js  documents.ts  index.js  index.ts  locale.js  locale.ts
templates/: index.html
