[tool.poetry]
name = "documento"
version = "0.1.0"
description = "A small Document Management System (DMS)"
authors = ["Jonathan Weth <dev@jonathanweth.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
django-rest-framework = "^0.1.0"
django = "^3.1.3"
django-rest-knox = "^4.1.0"
django-webpack-loader = "^0.7.0"
django-cleanup = "^5.1.0"
blabel = "^0.1.4"
python-escpos = "^3.0a8"
python-barcode = "^0.13.1"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
