[tool.poetry]
name = "documento"
version = "0.1.0"
description = "A small Document Management System (DMS)"
authors = ["Jonathan Weth <dev@jonathanweth.de>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6,<3.10"
django-rest-framework = "^0.1.0"
django = "^3.1.7"
django-rest-knox = "^4.1.0"
django-webpack-loader = "^0.7.0"
django-cleanup = "^5.1.0"
blabel = "^0.1.4"

[tool.poetry.dev-dependencies]
sphinx = "^3.5"
sphinxcontrib-django = "^0.5.0"
sphinx-autodoc-typehints = "^1.7"
django-stubs = "^1.1"
pytest = "^6.0"
pytest-django = "^4.1"
safety = "^1.8.5"
flake8 = "^3.9.0"
flake8-django = "^1.0.0"
flake8-fixme = "^1.1.1"
flake8-mypy = "^17.8.0"
flake8-bandit = "^2.1.2"
flake8-builtins = "^1.4.1"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.0.14"
black = "^20.8b1"
flake8-black = "^0.2.0"
isort = "^5.8.0"
flake8-isort = "^4.0.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"
tox = "^3.23.0"

[tool.black]
line-length = 100
exclude = "/migrations/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
